k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grep-backend
  namespace: grep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: grep
  template:
    metadata:
      labels:
        app: grep
    spec:
      containers:
        - name: grep
          image: <AWS_ACCOUNT_ID>.dkr.ecr.eu-west-3.amazonaws.com/grep:latest
          ports:
            - containerPort: 8081
