k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grep-service
  namespace: grep
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
  selector:
    app: grep
